--- a/MobileApp/PrototypeApp/App_Resources/Android/src/main/AndroidManifest.xml
+++ b/MobileApp/PrototypeApp/App_Resources/Android/src/main/AndroidManifest.xml
@@ -14,14 +14,17 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
+		
+	<!-- Line 25, android:usesCleartextTraffic="true" was added, is needed for JSON - jack -->
 	<application
+	
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
+		android:usesCleartextTraffic="true" 
 		android:theme="@style/AppTheme">
-
+		        
 		<activity
 			android:name="com.tns.NativeScriptActivity"
 			android:label="@string/title_activity_kimera"
