--- a/MobileApp/PrototypeApp/package.json
+++ b/MobileApp/PrototypeApp/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@nativescript/android": "8.0.0",
+    "@nativescript/ios": "8.0.0",
     "@nativescript/webpack": "beta"
   },
   "private": "true",
