--- a/Server/WebApiPrototype/WebApiPrototype/Properties/launchSettings.json
+++ b/Server/WebApiPrototype/WebApiPrototype/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "api/TemperatureSensors",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5000;http://192.168.68.110:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
