--- a/MobileApp/SunBatherApp/package.json
+++ b/MobileApp/SunBatherApp/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.1",
+    "nativescript-datetimepicker": "^1.2.3",
     "nativescript-ui-chart": "^8.0.2"
   },
   "devDependencies": {
