--- a/MobileApp/SunBatherApp/package.json
+++ b/MobileApp/SunBatherApp/package.json
@@ -39,6 +39,7 @@
     "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.1",
     "nativescript-datetimepicker": "^1.2.3",
+    "nativescript-drop-down": "^6.0.0",
     "nativescript-ui-chart": "^8.0.2"
   },
   "devDependencies": {
