--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@ typings/
 
 # Arduino ignore
 connection_info.h
+
+# App Ip config ignore
+apiConfig.js
+
+# Web API Ip Config Ignore
+launchSettings.json
