--- a/MobileApp/SunBatherApp/package.json
+++ b/MobileApp/SunBatherApp/package.json
@@ -36,6 +36,7 @@
     "url": "https://github.com/NativeScript/NativeScript/issues"
   },
   "dependencies": {
+    "@nativescript-community/ble": "^3.0.29",
     "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.1",
     "nativescript-datetimepicker": "^1.2.3",
