--- a/Server/SunBatherAPI/SunBatherAPI/SunBatherAPI.csproj
+++ b/Server/SunBatherAPI/SunBatherAPI/SunBatherAPI.csproj
@@ -20,4 +20,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Properties\launchSettingsTemplate.txt">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
