Add initial code for controller to receive commands

--- a/Controller/ControllerTest/ControllerTest.cbp
+++ b/Controller/ControllerTest/ControllerTest.cbp
@@ -26,11 +26,14 @@
 		<Unit filename="../Controller/database_interaction.h" />
 		<Unit filename="../Controller/date_time.h" />
 		<Unit filename="../Controller/interconnect.h" />
+		<Unit filename="../Controller/json_decoder.h" />
 		<Unit filename="../Controller/main_arduino.h" />
 		<Unit filename="../Controller/main_esp8266.h" />
+		<Unit filename="../Controller/misc.h" />
 		<Unit filename="../Controller/ring_buffer.h" />
 		<Unit filename="../Controller/sensor_record.h" />
 		<Unit filename="../Controller/state_flags.h" />
+		<Unit filename="../Controller/status.h" />
 		<Unit filename="../Controller/timer.h" />
 		<Unit filename="arduino_hardware_serial.h" />
 		<Unit filename="arduino_pins.h" />
@@ -38,6 +41,8 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="test_date_time.h" />
 		<Unit filename="test_interconnect.h" />
+		<Unit filename="test_json_decoder.h" />
+		<Unit filename="test_misc.h" />
 		<Unit filename="test_ring_buffer.h" />
 		<Unit filename="test_sensor_record.h" />
 		<Unit filename="test_state_flags.h" />
