--- a/Controller/ControllerTest/ControllerTest.cbp
+++ b/Controller/ControllerTest/ControllerTest.cbp
@@ -21,8 +21,6 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="../Controller/Controller.ino" />
-		<Unit filename="../Controller/connection_info.h" />
-		<Unit filename="../Controller/connection_info_template.h.txt" />
 		<Unit filename="../Controller/date_time.h" />
 		<Unit filename="../Controller/interconnect.h" />
 		<Unit filename="../Controller/json_decoder.h" />
@@ -36,6 +34,7 @@
 		<Unit filename="../Controller/settings.h" />
 		<Unit filename="../Controller/state_flags.h" />
 		<Unit filename="../Controller/timer.h" />
+		<Unit filename="../Controller/wifi_helper.h" />
 		<Unit filename="arduino_hardware_serial.h" />
 		<Unit filename="arduino_pins.h" />
 		<Unit filename="arduino_string.h" />
