--- a/Controller/ControllerTest/ControllerTest.cbp
+++ b/Controller/ControllerTest/ControllerTest.cbp
@@ -21,6 +21,7 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="../Controller/Controller.ino" />
+		<Unit filename="../Controller/bluetooth_interconnect.h" />
 		<Unit filename="../Controller/date_time.h" />
 		<Unit filename="../Controller/interconnect.h" />
 		<Unit filename="../Controller/json_decoder.h" />
@@ -35,8 +36,8 @@
 		<Unit filename="../Controller/state_flags.h" />
 		<Unit filename="../Controller/timer.h" />
 		<Unit filename="../Controller/wifi_helper.h" />
-		<Unit filename="arduino_hardware_serial.h" />
 		<Unit filename="arduino_pins.h" />
+		<Unit filename="arduino_stream.h" />
 		<Unit filename="arduino_string.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="test_date_time.h" />
