Added NTP functionality to controller

--- a/Controller/ControllerTest/ControllerTest.cbp
+++ b/Controller/ControllerTest/ControllerTest.cbp
@@ -34,6 +34,7 @@
 		<Unit filename="../Controller/server_link.h" />
 		<Unit filename="../Controller/settings.h" />
 		<Unit filename="../Controller/state_flags.h" />
+		<Unit filename="../Controller/time_keeper.h" />
 		<Unit filename="../Controller/timer.h" />
 		<Unit filename="../Controller/wifi_helper.h" />
 		<Unit filename="arduino_pins.h" />
