--- a/Controller/ControllerTest/ControllerTest.cbp
+++ b/Controller/ControllerTest/ControllerTest.cbp
@@ -22,6 +22,7 @@
 		</Compiler>
 		<Unit filename="../Controller/Controller.ino" />
 		<Unit filename="../Controller/bluetooth_interconnect.h" />
+		<Unit filename="../Controller/board_config.h" />
 		<Unit filename="../Controller/byte_queue.h" />
 		<Unit filename="../Controller/date_time.h" />
 		<Unit filename="../Controller/interconnect.h" />
@@ -30,6 +31,7 @@
 		<Unit filename="../Controller/main_esp8266.h" />
 		<Unit filename="../Controller/misc.h" />
 		<Unit filename="../Controller/ring_buffer.h" />
+		<Unit filename="../Controller/sensor_log.h" />
 		<Unit filename="../Controller/sensor_record.h" />
 		<Unit filename="../Controller/server_address.h" />
 		<Unit filename="../Controller/server_link.h" />
@@ -38,6 +40,7 @@
 		<Unit filename="../Controller/time_keeper.h" />
 		<Unit filename="../Controller/timer.h" />
 		<Unit filename="../Controller/wifi_helper.h" />
+		<Unit filename="arduino_misc.h" />
 		<Unit filename="arduino_pins.h" />
 		<Unit filename="arduino_print.h" />
 		<Unit filename="arduino_stream.h" />
