--- a/Server/SunBatherAPI/SunBatherAPI/appsettings.Development.json
+++ b/Server/SunBatherAPI/SunBatherAPI/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=localhost; Port=3306; Database=Project39DB; Uid=dbuser; Pwd=userpass;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
