--- a/Server/SunBatherAPI/SunBatherAPI/appsettings.Development.json
+++ b/Server/SunBatherAPI/SunBatherAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DBConnection": "Server=localhost; Port=3306; Database=Project39DB; Uid=dbuser; Pwd=userpass;"
+    "DBConnection": "Server=3.24.218.54; Port=3306; Database=Project39DB; Uid=dbuser; Pwd=userpass;"
   },
   "Logging": {
     "LogLevel": {
